# easy_listening

./: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.base.json
apps/mobile/: App.tsx  app.json  package.json  tsconfig.json
apps/mobile/src/: AppShell.tsx
apps/mobile/src/components/: CollectionCard.tsx  PlayerBar.tsx  PrimaryButton.tsx  ResourceCard.tsx  SegmentedTabs.tsx
apps/mobile/src/screens/: DetailScreen.tsx  HomeScreen.tsx  LibraryScreen.tsx
backend/: .env_dev.example  .env_prod.example  .env_test.example  README.md  pyproject.toml  setup.py
backend/app/: config.py  main.py  models.py  schemas.py  topic_tags.py
backend/app/api/: resources.py
backend/app/db/: __init__.py  engine.py  session.py
backend/app/repositories/: resources.py
backend/easy_listening_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_resources_api.py
docs/: bootstrap.md  core-features.md  development.md  project-context.md
scripts/: sync-assets.sh
src/: AppShell.tsx
src/api/: resources.ts
src/components/: CollectionCard.tsx  PlayerBar.tsx  ResourceCard.tsx  SegmentedTabs.tsx
src/models/: article.ts
src/screens/: DetailScreen.tsx  LibraryScreen.tsx
